# GoFish

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: config_LambdaCDM.ini  config_w0waCDM.ini  input_file_modification.ini  test.ini  test_multitracer_beta_phi.ini  test_multitracer_beta_phi_geff_validation.ini  test_multitracer_beta_phi_validation.ini  test_multitracer_beta_phi_validation_baumann_kmax2.ini  test_multitracer_beta_phi_validation_kmax2.ini  test_multitracer_geff_validation.ini
input_files/: DESI_All_nbar_validationpaper.txt  DESI_BGS_nbar.txt
src/: GoFish.py  TackleBox.py  combined_forecasts_DESI.py  constrain_w0wa.py  draw_binwidth_error_plots.py  draw_ellipses.py  draw_ellipses_subplots.py  input_file_modification.py  ioutils.py  plot_HDa.py  plot_pk.py
