[project]
name = "gofish-abbe"
version = "0.1.0"
description = "Using GoFish for forecasts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"matplotlib>=3.10.0",
   	"numpy<=3.0.0",
	"scipy>=1.15.2",
	"camb",
	"configobj",
	"pandas",
	"findiff",
	"quadpy"
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.11.0",
]
